@@ -1,6 +1,6 @@
 # remoter
 
-* **Version:** 0.4-0
+* **Version:** 0.4-1
 * **License:** [BSD 2-Clause](http://opensource.org/licenses/BSD-2-Clause)
 * **Status:** [![Build Status](https://travis-ci.org/snoweye/remoter.png)](https://travis-ci.org/snoweye/remoter) [![Appveyor Build status](https://ci.appveyor.com/api/projects/status/32r7s2skrgm9ubva?svg=true)](https://ci.appveyor.com/project/snoweye/remoter)
 * **Author:** Drew Schmidt and Wei-Chen Chen
